--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.137",
     "esbuild": "^0.20.2"
+  },
+  "dependencies": {
+    "ajv": "^8.12.0"
   }
 }
