--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.137",
-    "esbuild": "^0.20.2"
+    "esbuild": "^0.20.2",
+    "prettier": "3.2.5"
   },
   "dependencies": {
     "ajv": "^8.12.0"
